--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <p>Deze website bestaat puur om de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> makkelijker toegankelijk te maken. Momenteel bestaan de volgende twee weergaves.</p>
+          <p>Deze website heeft tot doel om de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> makkelijker toegankelijk te maken. Momenteel bestaan de volgende twee weergaves.</p>
 
 <ul>
 <li><a href="mart4-afkortingen-intact.html">Vierde Martijn met afkortingen intact</a></li>
