--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
 <!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
@@ -36,25 +36,33 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <p>Deze website heeft tot doel om de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> makkelijker toegankelijk te maken. Momenteel bestaan de volgende twee weergaves.</p>
+<p>Deze website heeft tot doel om de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> makkelijker toegankelijk te maken.</p>
+
+<h2>Weergaves</h2>
+
+Momenteel bestaan de volgende twee weergaves van het handschrift:
 
 <ul>
-<li><a href="mart4-afkortingen-intact.html">Vierde Martijn met afkortingen intact</a></li>
-<li><a href="mart4-afkortingen-opgelost.html">Vierde Martijn met afkortingen opgelost</a></li>
+<li><a href="mart4-afkortingen-intact.html"><cite>Vierde Martijn</cite> met afkortingen intact</a></li>
+<li><a href="mart4-afkortingen-opgelost.html"><cite>Vierde Martijn</cite> met afkortingen opgelost</a></li>
 </ul>
 
-<p>Het XML-bronbestand wat gebruikt kan worden om zulke weergaves te genereren kan op de Githubpagina worden gevonden.</p>
+<p>Het XML-bronbestand wat gebruikt kan worden om zulke weergaves te genereren kan op <a href="https://github.com/Frenzie/vierde-martijn">de Githubpagina</a> worden geraadpleegd.</p>
+
+<h2>Introductie tot de <cite>Vierde Martijn</cite></h2>
+
+<h2>Intellectuele eigendomsrechten</h2>
+
+<p>Het TEI XML-bestand en de daaruit gegenereerde weergaves zijn gepubliceerd onder een <a href="http://creativecommons.org/licenses/by-sa/4.0/deed.nl">Naamsvermelding-GelijkDelen 4.0 Internationaal-licentie</a> (CC BY-SA 4.0). Dit betekent dat de gebruiker het werk mag <strong>delen</strong> door het te kopiëren, te verspreiden en door te geven in om het even welk medium of bestandsformaat. Bovendien mag de gebruiker het werk <strong>bewerken</strong> en afgeleide werken maken. Dit alles evenwel onder voorwaarde van <strong>naamsvermelding</strong> van de maker van het werk en <strong>gelijk delen</strong> van het afgeleide werk onder dezelfde licentie. De gebruiker mag uitsluitend afstand doen van een of meerdere van deze voorwaarden met voorafgaande toestemming van de rechthebbende. <a href="http://creativecommons.org/licenses/by-sa/4.0/deed.nl"><img src="https://licensebuttons.net/l/by-sa/4.0/80x15.png" alt="Creative Commons Attribution-ShareAlike 4.0 International"></a></p>
         </article>
       </div>
     </div>
     <footer>
       <div class="owner">
       <p><a href="https://github.com/Frenzie" class="avatar"><img src="https://avatars0.githubusercontent.com/u/202757?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/Frenzie">Frenzie</a> maintains <a href="https://github.com/Frenzie/vierde-martijn">Vierde Martijn</a></p>
-
-
       </div>
       <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+        <small>Theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
       </div>
     </footer>
   </div>
