--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Momenteel bestaan de volgende twee weergaves van het handschrift:
 <li><a href="mart4-afkortingen-opgelost.html"><cite>Vierde Martijn</cite> met afkortingen opgelost</a></li>
 </ul>
 
-<p>Er is ook een automatisch gegenereerde <a href="mart4-abbr.html">lijst van afkortingen</a>. Het XML-bronbestand wat gebruikt kan worden om zulke weergaves te genereren kan op <a href="https://github.com/Frenzie/vierde-martijn">de Githubpagina</a> worden geraadpleegd.</p>
+<p>Er is ook een automatisch gegenereerde <a href="mart4-abbr.html">lijst van afkortingen</a> beschikbaar. Het XML-bronbestand wat gebruikt kan worden om zulke weergaves te genereren kan op <a href="https://github.com/Frenzie/vierde-martijn">de Githubpagina</a> worden geraadpleegd.</p>
 
 <h2>Introductie tot de <cite>Vierde Martijn</cite></h2>
 
