--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <article class="markdown-body">
 <p>Deze website heeft tot doel om de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> makkelijker toegankelijk te maken.</p>
 
-<h2>Weergaves</h2>
+<h2 id="weergaves">Weergaves</h2>
 
 Momenteel bestaan de volgende twee weergaves van het handschrift:
 
@@ -52,7 +52,7 @@ Momenteel bestaan de volgende twee weergaves van het handschrift:
 
 <p>Er is ook een automatisch gegenereerde <a href="mart4-abbr.html">lijst van afkortingen</a> beschikbaar. Het XML-bronbestand wat gebruikt kan worden om zulke weergaves te genereren kan op <a href="https://github.com/Frenzie/vierde-martijn">de Githubpagina</a> worden geraadpleegd.</p>
 
-<h2>Introductie tot de <cite>Vierde Martijn</cite></h2>
+<h2 id="introductie">Introductie tot de <cite>Vierde Martijn</cite></h2>
 
 <p>De <em>Vierde Martijn</em> is een tekst uit 1299 die slechts in een enkel handschrift is overgeleverd. Hoewel de <em>Vierde Martijn</em> niet door Maerlant geschreven is en er verder niets over de auteur bekend is, kan vanuit de tekst zelf toch de hypothese worden opgebouwd dat de auteur aan het hof van de Brabantse hertog Jan I vertoefd moet hebben. Vermoedelijk is hij daarna tijdens het interregnum van Godevaart van Brabant uitgeweken of -gewezen richting Zeeland of Vlaanderen. Er is ook weinig bekend over de scribent die verantwoordelijk was voor het handschrift, de Tweede Partie-kopiist. Deze noodnaam is gebaseerd op zijn bekendste afschrift, de Tweede Partie van de <em>Spiegel historiael</em> in de Weense codex. We weten alleen dat hij een behoorlijk productief afschrijver en corrector uit het kartuizerklooster Herne was.</p>
 <p>Van de <em>Vierde Martijn</em> was tot nog toe geen digitale editie beschikbaar. Om in dit gemis te voorzien is er binnen de context van deze masterproef voor gekozen om een digitale editie in TEI XML te maken. Dit past binnen het kader van een volledige uitgave van de Heber-Serrurecodex, een verzamelhandschrift dat naast de <em>Vierde Martijn</em> eveneens de enige vindplaats is van de <em>Rinclus</em> en <em>Der kerken claghe</em>. Het TEI XML-bestand en de twee meest voor de hand liggende weergaves, namelijk de tekst met afkortingen intact en met afkortingen opgelost, kunnen op deze pagina worden geraadpleegd.</p>
