Tekst website iets aangepast

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-<p>Deze website heeft tot doel om de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> makkelijker toegankelijk te maken.</p>
+<p>Deze website vergezelt mijn masterproef, <cite>Het digitaal editeren van Middelnederlandse teksten: een status quaestionis en een verkenning aan de hand van een cigitale editie van de <cite>Vierde Martijn</cite></cite>. Het doel van deze pagina is om de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> eenvoudig toegankelijk te maken.</p>
 
 <h2 id="weergaves">Weergaves</h2>
 
