Typo, hs. schrijft "de"

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Momenteel bestaan de volgende twee weergaves van het handschrift:
 </blockquote>
 <p>Het antwoord luidt dat de gemeente, d.w.z. de burgerij, niet betrouwbaar is en slechts het pad volgt dat door de heren ingezet wordt.</p>
 <blockquote>
-<p>Die heren sitten op dat rat,<br />Die gemeente volcht den pat:<br />Sietsi die heren baden<br />Si willen mede waden.</p>
+<p>De heren sitten op dat rat,<br />Die gemeente volcht den pat:<br />Sietsi die heren baden<br />Si willen mede waden.</p>
 </blockquote>
 <p>Overigens wordt diezelfde burgerij omwille van haar gebrek aan zelfstandigheid consequent met het laatdunkende woord <em>dorpers</em> getypeerd.</p>
 <h4 id="het-derde-deel">Het derde deel</h4>
