Illustratie en verbeteringen

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-<p>Deze website vergezelt mijn masterproef, <cite>Het digitaal editeren van Middelnederlandse teksten: een status quaestionis en een verkenning aan de hand van een cigitale editie van de <cite>Vierde Martijn</cite></cite>. Het doel van deze pagina is om de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> eenvoudig toegankelijk te maken.</p>
+<figure>
+	<img src="images/119r-eerste-strofe.jpg" alt="">
+	<figcaption>De eerste strofe van de <cite>Vierde Martijn</cite>.</figcaption>
+</figure>
+
+<p>Deze website vergezelt mijn masterproef, <cite>Het digitaal editeren van Middelnederlandse teksten: een status quaestionis en een verkenning aan de hand van een digitale editie van de <cite>Vierde Martijn</cite></cite>. Via deze pagina zijn de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> eenvoudig te raadplegen.</p>
 
 <h2 id="weergaves">Weergaves</h2>
 
