--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <article class="markdown-body">
 <figure>
 	<img src="images/119r-eerste-strofe.jpg" alt="">
-	<figcaption>De eerste strofe van de <cite>Vierde Martijn</cite>.</figcaption>
+	<figcaption>De eerste strofe van de <cite>Vierde Martijn</cite> op fol. 119r° van het Heber-Serrurehandschrift.<br>
+	Bron: <a href="http://lib.ugent.be/catalog/rug01:000763342">Universiteitsbibliotheek Gent</a> (CC BY-NC-SA 2.0 BE).</figcaption>
 </figure>
 
 <p>Deze website vergezelt mijn masterproef, <cite>Het digitaal editeren van Middelnederlandse teksten: een status quaestionis en een verkenning aan de hand van een digitale editie van de <cite>Vierde Martijn</cite></cite>. Via deze pagina zijn de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> eenvoudig te raadplegen.</p>
