--- a/index.html
+++ b/index.html
@@ -47,16 +47,28 @@
 
 <p>Deze website vergezelt mijn masterproef, <cite>Het digitaal editeren van Middelnederlandse teksten: een status quaestionis en een verkenning aan de hand van een digitale editie van de <cite>Vierde Martijn</cite></cite>. Via deze pagina zijn de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> eenvoudig te raadplegen.</p>
 
-<h2 id="weergaves">Weergaves</h2>
+<div id="weergaves">
+<h2>Weergaves</h2>
 
-Momenteel bestaan de volgende twee weergaves van het handschrift:
+<p>Momenteel bestaan er twee gegenereerde weergaves van het handschrift, namelijk de tekst met afkortingen intact en met afkortingen opgelost.</p>
 
-<ul>
-<li><a href="mart4-afkortingen-intact.html"><cite>Vierde Martijn</cite> met afkortingen intact</a></li>
-<li><a href="mart4-afkortingen-opgelost.html"><cite>Vierde Martijn</cite> met afkortingen opgelost</a></li>
-</ul>
+
+<a href="mart4-afkortingen-intact.html">
+	<figure>
+		<figcaption><h3><cite>Vierde Martijn</cite> met afkortingen intact</h3></figcaption>
+		<img src="images/screenshot-vierde-martijn-eerste-strofe-afkortingen-intact.png" alt="">
+	</figure>
+</a>
+
+<a href="mart4-afkortingen-opgelost.html">
+	<figure>
+		<figcaption><h3><cite>Vierde Martijn</cite> met afkortingen opgelost</h3></figcaption>
+		<img src="images/screenshot-vierde-martijn-eerste-strofe-afkortingen-opgelost.png" alt="">
+	</figure>
+</a>
 
 <p>Er is ook een automatisch gegenereerde <a href="mart4-abbr.html">lijst van afkortingen</a> beschikbaar. Het XML-bronbestand wat gebruikt kan worden om zulke weergaves te genereren kan op <a href="https://github.com/Frenzie/vierde-martijn">de Githubpagina</a> worden geraadpleegd.</p>
+</div>
 
 <h2 id="introductie">Introductie tot de <cite>Vierde Martijn</cite></h2>
 
