--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
 	Bron: <a href="http://lib.ugent.be/catalog/rug01:000763342">Universiteitsbibliotheek Gent</a> (CC BY-NC-SA 2.0 BE).</figcaption>
 </figure>
 
+<div id="inhoud">
+<h2>Inhoud</h2>
+<ol>
+	<li><a href="#weergaves">Weergaves</a></li>
+	<li><a href="#introductie">Introductie tot de <cite>Vierde Martijn</cite></a></li>
+	<li><a href="#bibliografie">Bibliografie</a></li>
+	<li><a href="#rechten">Intellectuele eigendomsrechten</a></li>
+</ol>
+</div>
+
 <p>Deze website vergezelt mijn masterproef, <cite>Het digitaal editeren van Middelnederlandse teksten: een status quaestionis en een verkenning aan de hand van een digitale editie van de <cite>Vierde Martijn</cite></cite>. Via deze pagina zijn de gegenereerde HTML-bestanden van mijn digitale editie van de <em>Vierde Martijn</em> eenvoudig te raadplegen.</p>
 
 <div id="weergaves">
@@ -126,7 +136,7 @@
 <p>De Tweede Partie-kopiist is zo genoemd door <span class="citation" data-cites="Kwakkel:2002">Kwakkel (2002, 24)</span>, omdat zijn grootste en best gekende werk de Tweede Partie van de <em>Spiegel historiael</em> betreft. Hij was een zeer productief afschrijver, aan wie maar liefst acht codices kunnen worden toegeschreven. De Tweede Partie-kopiist was waarschijnlijk tussen 1375-1400 in het kartuizerklooster Herne werkzaam als een zeer bedrijvig kopiist en corrector <span class="citation" data-cites="Kwakkel:2002">(Kwakkel 2002, 45-46, 48)</span>. In tegenstelling tot de andere kopiisten in Herne gebruikte de Tweede Partie-kopiist een middelmatige textualis. Ook zijn ductus varieert sterk, maar toch is hij een ervaren schrijver. Het werk van de Tweede Partie-kopiist wordt gekenmerkt door het gebruik van uitzonderlijk veel afkortingen <span class="citation" data-cites="Kwakkel:2002">(Kwakkel 2002, 103)</span>. Daarnaast hield de Tweede Partie-kopiist zich veel bezig met het verbeteren van afschriften. Hij leverde zowel voor zijn eigen teksten als voor die van andere Hernse kartuizers deze inspanning. Gewoonlijk gebeurde dit met een <em>signe de renvoi</em> dat aangeeft waar er een fout of weglating aanwezig is <span class="citation" data-cites="Kwakkel:2002">(Kwakkel 2002, 107)</span>. In het geval van de Heber-Serrurecodex betreffen de <em>signes de renvoi</em> gewoonlijk een kruisje, maar het <em>signe</em> kan ook bestaan uit andere symbolen of letters.</p>
 <p>In Herne zijn veel handschriften geheel afgewerkt door één scribent. Zo ook de Tweede Partie-kopiist in zijn naamgevende Tweede Partie van de <em>Spiegel historiael</em> in de Weense codex. Alle elf productie-eenheden in de codex werden door hem gekopieerd, gecorrigeerd en gerubriceerd <span class="citation" data-cites="Kwakkel:2002">(Kwakkel 2002, 97)</span>. Er was in Herne zowel perkament van slechte, gemiddelde als goede kwaliteit beschikbaar. Kwakkel vermoedt dat de grote variatie aan perkamentkwaliteit werd veroorzaakt doordat kartuizers hun eigen perkamenten bladen moesten prepareren, zodat het verschil verklaard kan worden vanuit de variatie in de bekwaamheid van individuele kartuizers <span class="citation" data-cites="Kwakkel:2002">(Kwakkel 2002, 101)</span>.</p>
 <div class="references">
-<h2>Bibliografie</h2>
+<h2 id="bibliografie">Bibliografie</h2>
 <p>Asselbergs, W.J.M.A. 1964. “Het Landschap van de Vierde Martijn.” <em>Verslagen En Mededelingen van de Koninklijke Academie Voor Nederlandse Taal- En Letterkunde (Nieuwe Reeks)</em> Jaargang 1964: 249–77. <a href="http://www.dbnl.org/tekst/_ver016196401_01/_ver016196401_01_0012.php">http://www.dbnl.org/tekst/_ver016196401_01/_ver016196401_01_0012.php</a>.</p>
 <p>Biemans, Jos A.A.M. 1997. <em>Onsen Speghele Ystoriale in Vlaemsche: Codicologisch Onderzoek Naar de Overlevering van de “Spiegel Historiael” van Jacob van Maerlant, Philip Utenbroeke En Lodewijk van Velthem, Met Een Beschrijving van de Handschriften En Fragmenten</em>. Vol. 1. Onderzoek. Appendices. Schrift En Schriftdragers in de Nederlanden in de Middeleeuwen. Leuven: Peeters.</p>
 <p>Driel, Joost van. 2011. “Een Streven Naar Kunst: Formele Vernieuwingen in de Middelnederlandse Literatuur Omstreeks 1300.” <em>Spiegel Der Letteren</em> 53 (1): 1–28. doi:<a href="http://dx.doi.org/10.2143/SDL.53.1.2071215">10.2143/SDL.53.1.2071215</a>.</p>
@@ -150,7 +160,7 @@
 </ol>
 </section>
 
-<h2>Intellectuele eigendomsrechten</h2>
+<h2 id="rechten">Intellectuele eigendomsrechten</h2>
 
 <p>Het TEI XML-bestand en de daaruit gegenereerde weergaves zijn gepubliceerd onder een <a href="http://creativecommons.org/licenses/by-sa/4.0/deed.nl">Naamsvermelding-GelijkDelen 4.0 Internationaal-licentie</a> (CC BY-SA 4.0). Dit betekent dat de gebruiker het werk mag <strong>delen</strong> door het te kopiëren, te verspreiden en door te geven in om het even welk medium of bestandsformaat. Bovendien mag de gebruiker het werk <strong>bewerken</strong> en afgeleide werken maken. Dit alles evenwel onder voorwaarde van <strong>naamsvermelding</strong> van de maker van het werk en <strong>gelijk delen</strong> van het afgeleide werk onder dezelfde licentie. De gebruiker mag uitsluitend afstand doen van een of meerdere van deze voorwaarden met voorafgaande toestemming van de rechthebbende. <a href="http://creativecommons.org/licenses/by-sa/4.0/deed.nl"><img src="https://licensebuttons.net/l/by-sa/4.0/80x15.png" alt="Creative Commons Attribution-ShareAlike 4.0 International"></a></p>
         </article>
