--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div id="weergaves">
 <h2>Weergaves</h2>
 
-<p>Momenteel bestaan er twee gegenereerde weergaves van het handschrift, namelijk de tekst met afkortingen intact en met afkortingen opgelost.</p>
+<p>Momenteel bestaan er twee gegenereerde weergaves van het handschrift, namelijk de tekst met afkortingen intact en met afkortingen opgelost. Daarnaast is er een gecombineerde weergave beschikbaar, die op een voldoende brede monitor toelaat om zowel transcriptie als facsimile's gelijktijdig te raadplegen.</p>
 
 
 <a href="mart4-afkortingen-intact.html">
@@ -74,6 +74,14 @@
 	<figure>
 		<figcaption><h3><cite>Vierde Martijn</cite> met afkortingen opgelost</h3></figcaption>
 		<img src="images/screenshot-vierde-martijn-eerste-strofe-afkortingen-opgelost.png" alt="">
+	</figure>
+</a>
+
+<a href="mart4-combinatie.html">
+	<figure>
+		<figcaption><h3><cite>Vierde Martijn</cite> gelijktijdige weergave</h3></figcaption>
+		<img src="images/screenshot-combi-afkortingen-fs8.png" alt="">
+		<img src="images/screenshot-combi-alles-fs8.png" alt="">
 	</figure>
 </a>
 
