--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <![endif]-->
 
   <title>Vierde Martijn</title>
-  <meta name="description" content="">
+  <meta name="description" content="Een digitale editie van de Vierde Martijn. De Vierde Martijn is een tekst uit 1299 die slechts in een enkel handschrift is overgeleverd.">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
